config, edits, logos, icons, etc

--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -9,6 +9,7 @@
   <% } %>
     <div id="title">
       <h1><%= config.title %></h1>
+      <p>&#8627; <%= config.subtitle %> &#x25AE;</p>
     </div>
   </a>
   <div id="nav">
