--- a/source/css/_colors/dark.styl
+++ b/source/css/_colors/dark.styl
@@ -1,4 +1,5 @@
 $color-background = #1d1f21
+$color-background = #212121
 $color-footer-mobile-1 = lighten($color-background, 2%)
 $color-footer-mobile-2 = lighten($color-background, 10%)
 $color-background-code = lighten($color-background, 2%)
@@ -6,6 +7,7 @@ $color-border = #666
 $color-meta = #666
 $color-meta-code = #666
 $color-link = rgba(212, 128, 170, 1)
+$color-link = rgba(197, 239, 247, 1)
 $color-text = #c9cacc
 $color-accent-3 = #cccccc
 $color-accent-2 = #eeeeee
