--- a/source/css/_fonts.styl
+++ b/source/css/_fonts.styl
@@ -2,3 +2,15 @@
   font-style: normal
   font-family: "Meslo LG"
   src: local("Meslo LG S"), url("../lib/meslo-LG/MesloLGS-Regular.ttf") format("truetype")
+
+@font-face
+  font-family: 'Roboto'
+  font-style: normal
+  font-weight: 400
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v18/KFOmCnqEu92Fr1Mu4mxP.ttf) format('truetype')
+
+@font-face 
+  font-family: 'Raleway'
+  font-style: normal
+  font-weight: 400
+  src: local('Raleway'), local('Raleway-Regular'), url(https://fonts.gstatic.com/s/raleway/v12/1Ptug8zYS_SKggPNyC0ISg.ttf) format('truetype')
