--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -16,6 +16,9 @@ html
   -webkit-text-size-adjust: 100%
   -ms-text-size-adjust: 100%
 
+header
+  font-family: $font-family-mono
+
 body
   display: flex
   flex-direction: column
@@ -181,3 +184,6 @@ code
 
   .line
     height: 22px
+
+#about
+  font-family: $font-family-mono
