--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -9,7 +9,7 @@
   <% } %>
     <div id="title">
       <h1><%= config.title %></h1>
-      <p>&#8627; <%= config.subtitle %> &#x25AE;</p>
+      <p>&#8627; <%= config.subtitle %></p>
     </div>
   </a>
   <div id="nav">
