--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -4,6 +4,8 @@
 <body class="max-width mx-auto px3">
     <% if (is_post()) { %>
       <%- partial('_partial/post/actions_desktop') %>
+    <% } else { %>
+      <%- partial('_partial/particles') %>
     <% } %>
     <div class="content index my4">
         <% if (!is_post()) { %>
