--- a/layout/writeups.ejs
+++ b/layout/writeups.ejs
@@ -1,11 +1,7 @@
 <section id="writing">
   <span class="h1"><a href="<%- url_for("writeups") %>"><%= __('index.write-ups') %></a></span>
   <ul class="post-list">
-    <% if (theme.posts_overview.show_all_posts) { %>
-      <% var show_posts = page.posts.sort('date', 'desc') %>
-    <% } else { %>
-      <% var show_posts = site.posts.sort('date', 'desc').limit(theme.posts_overview.post_count || 5) %>
-    <% } %>
+    <% var show_posts = site.posts.sort('date', 'desc') %>
     <% show_posts.each(function(post, i){ %>
         <% if (post.categories.filter(p => p.name === "writeups").length > 0) { %>
           <li class="post-item">
