--- a/layout/_partial/particles.ejs
+++ b/layout/_partial/particles.ejs
@@ -13,6 +13,20 @@
 </style>
 
 <script>
+var body = document.body,
+    html = document.documentElement;
+
+
+window.onscroll = () => {
+    var particles_canvas = document.querySelector("#particles-js canvas");
+    particles_canvas.style.height = Math.max(
+        body.scrollHeight,
+        body.offsetHeight,
+        html.clientHeight,
+        html.scrollHeight,
+        html.offsetHeight) + "px";
+};
+    
 /* ---- particles.js config ---- */
 
 particlesJS("particles-js", {
