particles.js lower cpu usage, add theme color

--- a/layout/_partial/particles.ejs
+++ b/layout/_partial/particles.ejs
@@ -1,4 +1,4 @@
-<script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.js"></script>
 <div id="particles-js"></div>
     
 <style>
@@ -32,14 +32,14 @@ window.onscroll = () => {
 particlesJS("particles-js", {
   "particles": {
     "number": {
-      "value": 100,
+      "value": 80,
       "density": {
         "enable": true,
         "value_area": 1000
       }
     },
     "color": {
-      "value": "#ffffff"
+      "value": ["#ffffff", "#2BBC8A"]
     },
     "opacity": {
       "value": 0.5,
