--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,5 +1,6 @@
 <footer id="footer">
   <div class="footer-left">
+    <!--anesec{S00n3r_0r_l4T3r_7h1s_wi1l_b3_4_v4l1d fl4G!}-->
     <%= __('footer.copyright') %> &copy; <%= new Date().getFullYear() %> <%= config.author || config.title %>
   </div>
   <div class="footer-right">
